<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PrivacyActivity.PrivacyPolicyActivity">


    <ImageView
        android:id="@+id/backButton"
        android:layout_width="50sp"
        android:layout_height="35sp"
        android:layout_margin="10sp"
        android:src="@drawable/baseline_arrow_back_24" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15sp"
            tools:ignore="ExtraText">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/todoist_privacy_policy_last_modified_may_17_2023_effective_date_june_17_2023"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="   This privacy policy (Policy) outlines how we handle your information when you use our Services. Please read this carefully to understand how we collect, use, and protect your data.

            ## Data Protection

            ### In Transit

            - All user data, including project names, task names, comments, uploaded files, account information, and payment details, are transmitted using industry best practices.
            - Specifically, we use **TLS 1.1-1.2 secure channels** and support both **128-bit or 256-bit configurations**, depending on the browser.
            "
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/at_rest_we_host_all_user_data_on_amazon_web_services_aws_servers_our_extensive_use_of_aws_s_built_in_firewalls_ensures_protection_against_unauthorized_remote_access_projects_tasks_comments_account_information_and_payment_details_are_encrypted_at_rest_files_uploaded_after_april_11_2016_are_also_stored_and_encrypted_aws_data_centers_undergo_annual_certifications_to_meet_the_highest_standards_of_physical_and_virtual_security"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="    ### Data Reliability

    - User data is **automatically backed up** on AWS servers with multiple redundant copies.
    - Todoist creates **daily automatic backups** within the app.
    - You can also create a backup at any time through Account Settings.

    ## Security Measures

    - We maintain a security system that:
    - **Prevents unauthorized access**.
    - Supports **continuous monitoring** for potential vulnerabilities.
    - Embraces ongoing, proactive improvement to stay ahead of security threats.
"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/reporting_vulnerabilities_if_you_discover_any_security_vulnerability_in_todoist_please_submit_a_report_and_we_ll_address_it_promptly_account_access_we_verify_account_access_through_both_email_password_based_authentication_and_google_accounts_authentication_via_oauth_2_0_passwords_are_stored_with_unique_salts_for_added_protection_oauth_allows_seamless_account_creation_and_access_without_storing_google_login_credentials_todoist_business_admin_controls_for_todoist_business_accounts_we_provide_two_user_roles_admin_access_to_the_central_control_panel_for_managing_billing_users_and_sharing_settings_user_regular_account_access"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/gdpr_compliance_todoist_is_fully_compliant_with_the_general_data_protection_regulation_gdpr_as_of_may_25th_2018_for_the_complete_privacy_policy_please_visit_the_official_todoist_privacy_policy_page_please_note_that_this_is_a_simplified_summary_and_i_recommend_reviewing_the_full_policy_for_comprehensive_details"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
