<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50sp"
        android:layout_height="35sp"
        android:layout_margin="10sp"
        android:src="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_margin="10sp"
        android:textColor="#000000"
        android:text="Sign Up" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="10sp"
        app:startIconDrawable="@drawable/baseline_email_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="10sp"
        app:startIconDrawable="@drawable/baseline_person_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/username" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="10sp"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:endIconMode="password_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <RadioGroup-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_margin="10sp"-->
<!--        android:layout_height="wrap_content" >-->

<!--        <RadioButton-->
<!--            android:id="@+id/radioButton"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="RadioButton" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/radioButton"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="RadioButton" />-->
<!--        -->
<!--    </RadioGroup>-->

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                android:layout_width="40sp"
                android:layout_height="40sp" />

            <TextView
                android:id="@+id/female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10sp"
                android:textColor="#000000"
                android:text="Female" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip"
                android:layout_width="40sp"
                android:layout_height="40sp" />

            <TextView
                android:id="@+id/male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10sp"
                android:textColor="#000000"
                android:text="Male" />

        </LinearLayout>


    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:textSize="20sp"
        android:layout_margin="10sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:text="Next" />


</LinearLayout>